# langwatch

./: .coderabbit.yaml  .dockerignore  .env.example  .gitattributes  .gitignore  .gitmodules  .golangci.yml  .mcp.json  .npmignore  .npmrc  .remmy-handoff.md  =  AGENTS.md  AUDIT_BRIEF.md  BIND_BRIEF.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  CULL_BRIEF.md  CULL_NOTES.md  Dockerfile  Dockerfile.dev  Dockerfile.go_service  Dockerfile.langevals  Dockerfile.langevals.lambda  Dockerfile.langwatch_nlp  Dockerfile.langwatch_nlp.lambda  Dockerfile.langy_agent  Dockerfile.langyagent  Dockerfile.opensearch_lite  Dockerfile.prod  FEATURE-MAP.md  FEATURE_MAP.md  HANDOFF-nway-results.md  LANGY_IMPLEMENTATION_HANDOFF.md  LICENSE-NPM.txt  LICENSE.md  Makefile  NOTICE  README.md  (+45 more)
langevals/: .dockerignore  .release-please-shim  CHANGELOG.md  LICENSE.md  Makefile  README.md  pyproject.toml
langevals/docs/: .gitignore  how-to-choose-your-evaluator.mdx
langevals/docs/api-reference/: openapi.json
langevals/docs/documentation/: getting-started.mdx  introduction.mdx
langevals/evaluators/azure/: pyproject.toml
langevals/evaluators/langevals/: pyproject.toml
langevals/evaluators/legacy/: pyproject.toml
langevals/evaluators/lingua/: pyproject.toml
langevals/evaluators/openai/: pyproject.toml
langevals/evaluators/presidio/: pyproject.toml
langevals/evaluators/ragas/: pyproject.toml
langevals/evaluators/topic_clustering/: pyproject.toml
langevals/langevals/: __init__.py  evaluation.py  expect.py  server.py  staged_payload.py  utils.py
langevals/langevals/pytest_plugins/: pass_rate_plugin.py
langevals/langevals_core/: pyproject.toml
langevals/langevals_core/langevals_core/: base_evaluator.py  image_support.py  litellm_patch.py  utils.py
langevals/notebooks/: intent_recognition.ipynb  presidio.ipynb  pyproject.toml
langevals/notebooks/product_sentiment_polarity/: product_dataset_builder.ipynb  product_sentiment_experiment_gpt-3.5-turbo.ipynb  product_sentiment_polarity_anthropic.ipynb  product_sentiment_polarity_openai.ipynb
langevals/notebooks/tutorials/: dspy_rag.ipynb  rag_evaluation.ipynb  (+1 more)
langevals/scripts/: bump_version.py  generate_evaluator_dependencies.py  generate_evaluators_ts.py  generate_mdx_list.py  generate_workspace.py  test_generate_evaluators_ts.py
langevals/tests/: test_azure_evaluation.py  test_evaluation.py  test_image_support.py  test_llm_as_judge.py  test_out_of_the_box_evaluators.py  test_simple_assertion.py  test_staged_payload.py
langevals/ts-integration/: evaluators.generated.ts
langwatch_nlp/: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.lambda  Makefile  README.md  proxy_config.yaml  pyproject.toml  remove-editable-dependencies.sh
langwatch_nlp/langwatch_nlp/: aigateway_client.py  error_tracking.py  generate_proxy_config.py  logger.py  main.py  sentiment_analysis.py
langwatch_nlp/notebooks/: .gitignore  DSPyTemplate.ipynb  PersonalTransactions Optimization.ipynb  RAG Optimization.ipynb  Topic Clustering.ipynb
langwatch_nlp/scripts/: entrypoint.sh
langwatch_nlp/tests/: conftest.py  test_app.py  test_fd_limits.py  test_secret_interpolation.py  test_timeout_config.py
mcp-server/: .env.example  .eslintrc.cjs  .gitignore  .npmignore  .release-please-shim  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  build.js  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  tsconfig.json  tsup.config.ts
mcp-server/src/: augmentations.d.ts  config.d.ts  config.ts  create-mcp-server.d.ts  create-mcp-server.ts  documentation-fetch.ts  http-server.ts  index.ts  langwatch-api-agents.ts  langwatch-api-annotations.ts  langwatch-api-api-keys.ts  langwatch-api-datasets.ts  langwatch-api-evaluators.ts  langwatch-api-model-providers.ts  langwatch-api-monitors.ts  langwatch-api-projects.ts  langwatch-api-scenarios.ts  langwatch-api-secrets.ts  langwatch-api-simulation-runs.ts  langwatch-api-suites.ts  langwatch-api-triggers.ts  langwatch-api-workflows.ts  langwatch-api.ts  public-http-request.ts
mcp-server/tests/: evaluate_langwatch_docs_setup.ipynb  evaluations.ipynb  scenario-openai.test.ts
python-sdk/: .cache  .editorconfig  .gitignore  .npmignore  .release-please-shim  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  pyproject.toml  scratchpad.ipynb
python-sdk/examples/: README.md  Untitled.ipynb  azure_openai_stream_bot.py  batch_evaluation.ipynb  batch_evaluation.py  batch_evalutation.py  crewai_bot.py  custom_evaluation_bot.py  dataset_crud_example.py  dataset_kitchen_sink.py  distributed_tracing.py  dspy_bot.py  dspy_visualization.ipynb  evaluation_manual_call.py  experiment_async_adk.ipynb  experiment_async_adk.py  fastapi_app.py  fetch_policies_demo.py  fetch_policies_example.py  generic_bot.py  generic_bot_exception.py  generic_bot_image.py  generic_bot_rag.py  generic_bot_rag_expected_output.py  generic_bot_rag_multithreaded.py  generic_bot_span_context_manager.py  generic_bot_span_low_level.py  generic_bot_span_wrapper.py  generic_bot_sync_function.py  generic_bot_update_metadata_later.py  guaranteed_availability_with_cli.py  guardrails.py  guardrails_parallel.py  guardrails_without_tracing.py  haystack_bot.py  langchain_bot.py  langchain_bot_with_memory.py  langchain_rag_bot.py  langchain_rag_bot_vertex_ai.py  langchain_rag_bot_with_threads.py  (+27 more)
python-sdk/langwatch/: .gitignore  README.md  __init__.py  batch_evaluation.py  batchevaluation.py  dspy.py  evaluations.py  guardrails.py  langchain.py  litellm.py  login.py  openai.py  pyproject.toml  tracer.py  types.py  utils.py
python-sdk/openapi-templates/: endpoint_module.py.jinja  types.py.jinja
python-sdk/tests/: conftest.py  test_cli_runner.py  test_client.py  test_disable_sending_singleton_poisoning.py  test_examples.py  test_fetch_policies_e2e.py  test_generated_client_status_codes.py  test_guardrails.py  test_langchain.py  test_login.py  test_openai.py  test_prompt_formatter.py  test_retry_transient.py  test_ssl_config.py  test_utils.py  utils.py
python/langwatch/: README.md  pyproject.toml
(+18334 files in other folders)
