[project]
name = "langwatch-server"
version = "2.4.0"
description = "LangWatch Server - Observability for LLM Applications"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
langwatch-server = "langwatch_server.bin.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = [
  "langwatch_server",
  "bin/**/*",
  "langwatch/**/*",
  "langwatch_nlp/**/*",
  "build_hooks.py",
]
exclude = [
  "langwatch/node_modules/**/*",
  "langwatch/.next/cache",
  "langwatch/.next-saas",
  "python-sdk/**/*",
  "typescript-sdk/**/*",
  "langwatch_nlp/.venv/**/*",
  "langwatch_nlp/notebooks/**/*",
  "**/.venv/**/*",
  "**/.env",
  "**/.ipynb_checkpoints/**/*",
  "**/.pytest_cache/**/*",
  "**/*.pyc",
  "**/__pycache__",
  "**/.DS_Store",
]

[tool.hatch.build.targets.wheel]
packages = ["langwatch_server"]
artifacts = ["langwatch_server"]

[tool.hatch.build.hooks.custom]
path = "build_hooks.py"
