[project]
name = "langwatch_nlp"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "black>=25.1.0",
    "boto3>=1.34.34,<2",
    "dspy>=2.6.18,<2.7",
    "fastapi>=0.111.1,<1",
    "google-cloud-aiplatform>=1.70.0,<2",
    "httpx>=0.27.0,<0.29",
    "isort>=6.0.1",
    "jinja2>=3.1.4",
    "langchain-community>=0.0.28,<0.1",
    "langevals-core>=0.1.13,<0.2",
    "langwatch>=0.1.37,<0.2",
    "litellm[proxy]>=1.63.7,<2",
    "mangum>=0.17.0,<0.18",
    "nanoid>=2.0.0,<3",
    "numpy>=1.26.4,<2",
    "openai>=1.61.0,<2",
    "pillow>=11.0.0,<12",
    "pydantic>=2.9.2,<3",
    "python-dotenv>=1.0.1,<2",
    "scikit-learn>=1.5.2,<2",
    "scipy>=1.14.1,<2",
    "sentry-sdk[fastapi]>=1.45.1,<2",
    "tenacity>=8.5.0,<9",
    "uvicorn>=0.29.0,<0.30",
    "watchdog>=5.0.3",
    "weaviate-client>=4.10.2,<5",
]

[project.optional-dependencies]
dev = [
    "pytest >= 8.3.3, < 8.4",
    "pandas >= 2.2.3, < 2.3",
    "pytest-httpx >= 0.30.0",
    "pytest-asyncio >= 0.23.8, < 0.24",
    "ipykernel >= 6.29.5, < 7",
    "watchdog >= 5.0.3, < 6",
]

[tool.uv]
package = false

[tool.uv.sources]
langwatch = { path = "../python-sdk-legacy", editable = true }
