[project]
name = "langwatch_nlp"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "black>=25.1.0",
    "boto3>=1.34.34,<2",
    "datamodel-code-generator>=0.30.1",
    "dspy>=3.0.3,<4",
    "fastapi>=0.111.1,<1",
    "google-cloud-aiplatform>=1.70.0,<2",
    "httpx>=0.27.0,<0.29",
    "isort>=6.0.1",
    "jinja2>=3.1.4",
    "jsonpath-ng>=1.7.0,<2",
    "langevals-core>=0.1.21,<0.2",
    "langwatch>=0.1.37,<0.11",
    "litellm[proxy]>=1.81.3",
    "mangum>=0.17.0,<0.22",
    "nanoid>=2.0.0,<3",
    "numpy>=1.26.4,<3",
    "openai>=2.8.1,<3",
    "pillow>=11.0.0,<13",
    "pydantic>=2.9.2,<3",
    "python-dotenv>=1.0.1,<2",
    "python-liquid>=2.0.2",
    "scikit-learn>=1.5.2,<2",
    "scipy>=1.14.1,<2",
    "sentry-sdk[fastapi]>=1.45.1,<2",
    "tenacity>=8.5.0,<9",
    "uvicorn>=0.31.1",
    "watchdog>=5.0.3",
    "structlog>=24.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest >= 8.3.3, < 8.4",
    "pandas >= 2.2.3, < 2.3",
    "pip-licenses>=5.5.0",
    "pytest-httpx >= 0.30.0",
    "pytest-asyncio >= 0.23.8, < 0.24",
    "ipykernel >= 6.29.5, < 8",
    "watchdog >= 5.0.3, < 6",
    "ruff >= 0.11.1",
]

[tool.uv]
package = false

[tool.uv.sources]
langwatch = { path = "../python-sdk", editable = true }
langevals-core = { path = "../langevals/langevals_core" }
