[project]
name = "mcp-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=6.30.1",
    "langwatch",
    "litellm>=1.77.0",
    "mcp[cli]>=1.13.1",
    "pandas>=2.3.2",
    "tenacity>=9.1.2",
]

[tool.uv.sources]
langwatch = { path = "../python-sdk", editable = true }
