[project]
name = "mcp-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=6.30.1",
    "langwatch",
    "litellm>=1.84.0",
    "mcp[cli]>=1.28.1",  # security: mcp advisories (#1599, #1600, #1602)
    "pandas>=2.3.2",
    "tenacity>=9.1.2",
]

[tool.uv]
exclude-newer = "7 days"

# Transitive-dependency security pins. Keep these even when the importing
# package isn't a direct dependency, so a future re-resolution can't silently
# pull a vulnerable version back in.
constraint-dependencies = [
    "python-dotenv>=1.2.2",  # security: python-dotenv advisory (#934)
    "python-liquid>=2.2.1",  # security: python-liquid advisory (#1528)
]

[tool.uv.sources]
langwatch = { path = "../python-sdk", editable = true }
