[project]
name = "langwatch"
version = "0.1.36"
description = "Python SDK for LangWatch for monitoring your LLMs"
authors = [{ name = "Rogerio Chaves", email = "rogerio@langwatch.ai" }]
requires-python = ">=3.9,<3.13,!=3.9.7"
license = { text = "MIT" }
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "nanoid>=2.0.0,<3.0.0",
    "requests>=2.31.0,<3.0.0",
    "pydantic>=1,<3",
    "httpx>=0.27.0,<0.28.0",
    "retry>=0.9.2,<0.10.0",
    "tqdm>=4.66.2,<5.0.0",
    "pandas>=2.2.2,<3.0.0",
    "coolname>=2.2.0,<3.0.0",
    "deprecated>=1.2.14,<2.0.0",
]

[project.optional-dependencies]
openai = ["openai>=1.42.0,<2.0.0"]
langchain = ["langchain>=0.3.0,<1.0.0"]
dspy = ["dspy-ai>=2.5.2,<3.0.0"]
litellm = ["litellm>=1.40.15,<2.0.0"]
dev = [
    # uv pip install crewai==0.60.0 openinference-instrumentation-crewai duckduckgo_search
    "pytest>=7.4.2,<8.0.0",
    "pydantic>=1,<2.10.2",                                      # v2.10.2 is broken for chainlit
    "chainlit>=1.3.0,<2",
    "python-dotenv==1.0.1",
    "jupyter>=1.0.0,<2.0.0",
    "langchain_community>=0.3.2,<0.4.0",
    "langchain_openai>=0.2.2,<0.3.0",
    "langchain_text_splitters>=0.3.0,<0.4.0",
    "langchain-google-vertexai>=2.0.4,<3.0.0",
    "langgraph>=0.2.35,<0.3.0",
    "faiss-cpu>=1.8.0,<2.0.0",
    "openinference-instrumentation-openai>=0.1.14,<0.2.0",
    "opentelemetry-instrumentation-openai>=0.31.0,<0.32.0",
    "opentelemetry-instrumentation-fastapi>=0.48b0",
    "openinference-instrumentation-langchain>=0.1.28,<0.2.0",
    "opentelemetry-instrumentation-langchain>=0.31.3,<0.32.0",
    "opentelemetry-instrumentation-anthropic>=0.31.3,<0.32.0",
    "openinference-instrumentation-haystack>=0.1.12,<0.2.0",
    "openinference-instrumentation-dspy>=0.1.12,<0.2.0",
    "opentelemetry-instrumentation-llamaindex>=0.31.3,<0.32.0",
    "anthropic>=0.36.0,<0.37.0",
    "haystack-ai>=2.5.1,<3.0.0",
    "streamlit>=1.37.1,<2.0.0",
    "json_repair>=0.30.2,<1",
]
test = [
    "pytest>=7.4.2,<8.0.0",
    "requests-mock>=1.11.0,<2.0.0",
    "freezegun>=1.2.2,<2.0.0",
    "pytest-asyncio>=0.21.1,<0.22.0",
    "numexpr>=2.8.7,<3.0.0",
    "pytest-httpx>=0.30.0,<0.31.0",
]

[project.urls]
Documentation = "https://langwatch.ai/docs"
"Source Code" = "https://github.com/langwatch/langwatch"
"Issue Tracker" = "https://github.com/langwatch/langwatch/issues"
Homepage = "https://github.com/langwatch/langwatch"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["langwatch"]

[tool.uv]
package = true
