[project]
name = "langevals-core"
version = "2.3.0"
description = "Core package for LLM evaluation platform, providing base classes and utilities."
authors = [
    {name = "Rogerio Chaves", email = "rogerio@langwatch.ai"},
    {name = "Yevhenii Budnyk", email = "y.budnyk789@gmail.com"},
]
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.4.0",
    "pandas>=2.2.2",
    "tqdm>=4.66.4",
    "litellm>=1.79.0",
    "openai>=1.107.0",
    "tenacity>=8.4.0",
    "vertexai>=1.71.1",
    "boto3>=1.34.34",
    # Enforce versions due to security issues
    "transformers>=4.49.0",
    "anyio>=4.8.0",
    "zipp>=3.23.0",
]

[dependency-groups]
dev = ["ipykernel>=6.29.4"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["langevals_core"]
