[project]
name = "langevals-notebook"
version = "0.1.3"
description = "A platform to evaluate LLM outputs using various evaluators."
authors = [{name = "Rogerio Chaves", email = "rogerio@langwatch.ai"}]
license = {text = "MIT"}
requires-python = ">=3.11,<3.13"
dependencies = [
    "pytest>=8.1.2",
    "fastapi>=0.115.11",
    "arize-phoenix>=4.9.0",
    "openinference-instrumentation-dspy>=0.1.9",
    "opentelemetry-exporter-otlp>=1.25.0",
    "hypercorn>=0.16.0",
    "pydantic>=2.4.0",
    "python-dotenv==1.0.1",
    "mangum>=0.17.0",
    "pandas>=2.2.2",
    "matplotlib>=3.8.4",
    "numpy>=1.26.4",
    "ipywidgets>=8.1.2",
    "dspy>=2.5.43",
    "seaborn>=0.13.2",
    "sentence-transformers>=3.0.0",
    "faiss-cpu==1.8.0",
    "presidio-analyzer>=2.2.355",
    "presidio-anonymizer>=2.2.355",
    "torch>=2.2.2",
    # All evaluators included directly
    "langevals",
    "langevals-core",
    "langevals-azure",
    "langevals-openai",
    "langevals-ragas",
    "langevals-lingua",
    "langevals-langevals",
]

[dependency-groups]
dev = [
    "toml>=0.10.2",
    "grevillea>=0.0.1",
    "litellm>=1.79.0",
    "instructor>=1.2.2",
    "pytest-xdist>=3.5.0",
    "flaky>=3.8.1",
    "ipykernel>=6.29.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Mark as non-publishable (equivalent to package-mode = false)
[tool.uv]
package = false

[tool.uv.sources]
langevals = { workspace = true }
langevals-core = { workspace = true }
langevals-azure = { workspace = true }
langevals-openai = { workspace = true }
langevals-ragas = { workspace = true }
langevals-lingua = { workspace = true }
langevals-langevals = { workspace = true }

# PyTorch CPU index for Linux
[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
