[project]
name = "langwatch"
version = "0.2.0"
description = "LangWatch Python SDK, for monitoring your LLMs"
authors = [{ name = "Alexander Forbes-Reed", email = "alex@langwatch.ai" }]
requires-python = ">=3.9,<3.13,!=3.9.7"
license = { text = "MIT" }
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "coolname>=2.2.0",
    "dspy>=2.5.29",
    "httpx>=0.28.1",
    "openinference-instrumentation-litellm>=0.1.14",
    "litellm>=1.40.15,<2.0.0",
    "openinference-instrumentation-openai>=0.1.22",
    "opentelemetry-api>=1.27.0",
    "opentelemetry-exporter-otlp-proto-http>=1.31.1",
    "opentelemetry-sdk>=1.27.0",
    "retry>=0.9.2",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.11.1",
]
test = [
    "pytest>=7.4.2,<8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/langwatch"]

[dependency-groups]
examples = [
    "langchain>=0.3.0,<1.0.0",
    "langchain_community>=0.3.2,<0.4.0",
    "langchain_openai>=0.2.2,<0.3.0",
    "langchain_text_splitters>=0.3.0,<0.4.0",
    "langchain-google-vertexai>=2.0.4,<3.0.0",
    "streamlit>=1.37.1,<2.0.0",
    "chainlit>=1.3.0,<2",
    "fastapi>=0.115.12",
    "haystack-ai==2.7.0",
    "nanoid>=2.0.0",
    "openai>=1.68.2",
    "openinference-instrumentation-openai>=0.1.22",
    "openinference-instrumentation-langchain>=0.1.28,<0.2.0",
    "opentelemetry-instrumentation-fastapi>=0.52b1",
    "pydantic>=1,<2.10.2", # v2.10.2 is broken for chainlit
    "python-dotenv>=1.0.1",
    "uvicorn>=0.25.0,<0.26.0",
]
