[project]
name = "langevals-azure"
version = "2.3.0"
description = "LangEvals Azure Content Safety evaluator for LLM outputs."
authors = [
    {name = "Rogerio Chaves", email = "rogerio@langwatch.ai"},
    {name = "Yevhenii Budnyk", email = "y.budnyk789@gmail.com"},
]
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "langevals-core>=0.1.0",
    "azure-ai-contentsafety>=1.0.0",
    "httpx>=0.27.0",
]

[dependency-groups]
test = [
    "pytest>=7.4.2",
    "python-dotenv==1.0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["langevals_azure"]

[tool.uv.sources]
langevals-core = { workspace = true }
