[project]
name = "langevals-langevals"
version = "2.3.0"
description = "LangEvals core evaluators."
authors = [
    {name = "Rogerio Chaves", email = "rogerio@langwatch.ai"},
    {name = "Yevhenii Budnyk", email = "y.budnyk789@gmail.com"},
]
license = {text = "MIT"}
requires-python = ">=3.11,<3.13"
dependencies = [
    "langevals-core>=0.1.0",
    "litellm>=1.79.0",
    "openai>=1.59.7",
    "numpy>=1.26.4",
    "dspy>=2.6.8",
    "markdown>=3.7",
    "jsonschema>=4.23.0",
    "sqlglot[rs]>=25.32.0",
]

[dependency-groups]
test = [
    "pytest>=7.4.2",
    "python-dotenv==1.0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["langevals_langevals"]

[tool.uv.sources]
langevals-core = { workspace = true }
