[project]
name = "langevals-legacy"
version = "2.2.0"
description = "LangEvals Legacy evaluator"
authors = [
    {name = "Rogerio Chaves", email = "rogerio@langwatch.ai"},
    {name = "Yevhenii Budnyk", email = "y.budnyk789@gmail.com"},
]
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "langevals-core>=0.1.0",
    # Pin to 0.2.x to keep pydantic_v1 compat for vendored legacy_ragas code
    "langchain-openai>=0.1.23,<0.3.0",
    "langchain-core>=0.2.0,<1.3.0",
    "langchain_community>=0.2.16,<0.5.0",
    "datasets>=2.14.6",
    "litellm>=1.79.0",
    "pysbd>=0.3.4",
    "appdirs>=1.4.4",
]

[dependency-groups]
test = [
    "pytest>=7.4.2",
    "python-dotenv>=1.0.1",
]
dev = ["ipykernel>=6.29.4"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["langevals_legacy"]

[tool.uv.sources]
langevals-core = { workspace = true }
