[project]
name = "langevals-lingua"
version = "2.3.0"
description = "LangEvals lingua evaluator for language detection."
authors = [
    {name = "Rogerio Chaves", email = "rogerio@langwatch.ai"},
]
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "langevals-core>=0.1.0",
    "lingua-language-detector>=2.0.2",
]

[dependency-groups]
test = [
    "pytest>=7.4.2",
    "python-dotenv==1.0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["langevals_lingua"]

[tool.uv.sources]
langevals-core = { workspace = true }
