[project]
name = "langevals-openai"
version = "2.3.0"
description = "LangEvals OpenAI moderation evaluator for LLM outputs."
authors = [
    {name = "Rogerio Chaves", email = "rogerio@langwatch.ai"},
]
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "langevals-core>=0.1.0",
    "openai>=1.27.0",
    "tqdm>=4.66.4",
]

[dependency-groups]
test = [
    "pytest>=7.4.2",
    "python-dotenv==1.0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["langevals_openai"]

[tool.uv.sources]
langevals-core = { workspace = true }
