[project]
name = "langevals-topic_clustering"
version = "0.1.0"
description = "LangEvals Topic Clustering — special evaluator for batch + incremental topic clustering. Migrated from langwatch_nlp/topic_clustering."
authors = [
    {name = "Rogerio Chaves", email = "rogerio@langwatch.ai"},
]
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "langevals-core>=0.1.0",
    "fastapi>=0.111.1,<1",
    # Pinned to match the rest of the langevals workspace (>=1.79.0 across
    # langevals-core, ragas, langevals, legacy). Tightening to >=1.81.3 forced
    # uv to look for pre-releases of langchain-openai (constrained <0.3.0 by
    # the legacy evaluator), which broke the workspace lock resolution.
    "litellm>=1.79.0",
    "numpy>=1.26.4,<3",
    "scikit-learn>=1.5.2,<2",
    "scipy>=1.14.1,<2",
    "tenacity>=8.5.0,<9",
    "structlog>=24.1.0",
]

[dependency-groups]
test = [
    "pytest>=7.4.2",
    "python-dotenv>=1.0.1",
]
dev = ["ipykernel>=6.29.4"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["langevals_topic_clustering"]

[tool.uv.sources]
langevals-core = { workspace = true }
